# eos-knowledge-services-multiplexer

./: Makefile.am  com.endlessm.BaseEknServicesMultiplexer.json.in  com.endlessm.EknServicesMultiplexer.json.in  configure.ac
data/: com.endlessm.EknServices.SearchProviderV1.service.in
multi-services/: eks-multi-services-dispatcher.c
